[package]
name = "rust_async_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.2.7", features = ["derive"] }
serde = {version = "1.0.163", features = ["derive"]}
serde_json = {version = "1.0.96"}
tokio = {version = "1.28.1", features = ["full"]}
